升级SqlToy到5.0.6